fixing z-index

--- a/css/global.css
+++ b/css/global.css
@@ -104,7 +104,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
 }
 .Header-wrapper{
     display: flex;
